# ingry

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: exceptions.py  main.py  models.py  repository.py  service.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 6b4813665f52_nutrientingredientlink_foreign_keys_fix.py  (+3 more)
backend/app/api/: deps.py  main.py
backend/app/core/: config.py  db.py
backend/app/repository/: base.py  ingredients.py  nutrients.py
backend/app/service/: base.py  nutrients.py
ingry/: pyproject.toml
ingry/core/: settings.py  urls.py
ingry/ingredients/: admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  utils.py  views.py
ingry/ingredients/migrations/: 0001_initial.py  0002_rename_ingridient_ingredient.py  0003_alter_ingredient_options_ingredient_calories_and_more.py  0004_alter_ingredient_category.py  0005_alter_ingredient_calories_and_more.py  0006_alter_ingredient_calories.py  0007_alter_ingredient_calories_and_more.py  0008_alter_ingredient_category.py  0009_alter_ingredient_minerals_alter_ingredient_vitamins.py  0010_alter_ingredient_name.py  0011_alter_ingredient_category.py  0012_alter_ingredient_category.py  0013_ingredient_image.py  0014_alter_ingredient_options_alter_ingredient_calories_and_more.py
ingry/items/: admin.py  models.py  serializer.py  urls.py  views.py
ingry/items/migrations/: 0001_initial.py
ingry/static/css/: base.css
ingry/swagger/: urls.py
ingry/templates/: base.html
(+7 files in other folders)
