[project]
name = "backend"
version = "0.1.0"
description = "Ingry on FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.2",
    "fastapi[standard]>=0.115.12",
    "psycopg[binary]>=3.2.8",
    "pydantic-settings>=2.9.1",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]
